@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2015 IBM Corporation and others.
+ * Copyright (c) 2003, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,11 +7,12 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Wedia - Joel DRIGO (joel.drigo@wedia-group.com): Bug 470866
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
@@ -22,7 +23,7 @@ import org.eclipse.swt.widgets.Scale;
 /**
  * A field editor for an integer type preference. This class may be used as is,
  * or subclassed as required.
- *
+ * 
  * @since 3.0
  */
 public class ScaleFieldEditor extends FieldEditor {
@@ -59,7 +60,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor.
-     *
+     * 
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -74,7 +75,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor with particular scale values.
-     *
+     * 
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -96,11 +97,22 @@ public class ScaleFieldEditor extends FieldEditor {
         setValues(min, max, increment, pageIncrement);
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#adjustForNumColumns(int)
+     */
     @Override
 	protected void adjustForNumColumns(int numColumns) {
         ((GridData) scale.getLayoutData()).horizontalSpan = numColumns - 1;
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doFillIntoGrid(org.eclipse.swt.widgets.Composite,
+     *      int)
+     */
     @Override
 	protected void doFillIntoGrid(Composite parent, int numColumns) {
         Control control = getLabelControl(parent);
@@ -116,6 +128,11 @@ public class ScaleFieldEditor extends FieldEditor {
         updateScale();
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doLoad()
+     */
     @Override
 	protected void doLoad() {
         if (scale != null) {
@@ -125,6 +142,11 @@ public class ScaleFieldEditor extends FieldEditor {
         }
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doLoadDefault()
+     */
     @Override
 	protected void doLoadDefault() {
         if (scale != null) {
@@ -134,6 +156,11 @@ public class ScaleFieldEditor extends FieldEditor {
         valueChanged();
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doStore()
+     */
     @Override
 	protected void doStore() {
         getPreferenceStore()
@@ -142,7 +169,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setIncrement(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
      */
@@ -152,7 +179,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMaximum(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
      */
@@ -162,7 +189,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMinimum(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
      */
@@ -170,6 +197,11 @@ public class ScaleFieldEditor extends FieldEditor {
         return minValue;
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#getNumberOfControls()
+     */
     @Override
 	public int getNumberOfControls() {
         return 2;
@@ -177,7 +209,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setPageIncrement(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
      */
@@ -187,7 +219,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns this field editor's scale control.
-     *
+     * 
      * @return the scale control, or <code>null</code> if no scale field is
      *         created yet
      */
@@ -198,7 +230,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Returns this field editor's scale control. The control is created if it
      * does not yet exist.
-     *
+     * 
      * @param parent
      *            the parent
      * @return the scale control
@@ -213,7 +245,12 @@ public class ScaleFieldEditor extends FieldEditor {
                     valueChanged();
                 }
             });
-            scale.addDisposeListener(event -> scale = null);
+            scale.addDisposeListener(new DisposeListener() {
+                @Override
+				public void widgetDisposed(DisposeEvent event) {
+                    scale = null;
+                }
+            });
         } else {
             checkParent(scale, parent);
         }
@@ -227,12 +264,17 @@ public class ScaleFieldEditor extends FieldEditor {
      * <li>Maximim = 10
      * <li>Increment = 1
      * <li>Page Increment = 1
-     * </ul>
+     * </ul> 
      */
     private void setDefaultValues() {
         setValues(0, 10, 1, 1);
     }
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#setFocus()
+     */
     @Override
 	public void setFocus() {
         if (scale != null && !scale.isDisposed()) {
@@ -243,7 +285,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setIncrement(int) and update the
      * scale.
-     *
+     * 
      * @param increment
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
@@ -256,7 +298,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMaximum(int) and update the
      * scale.
-     *
+     * 
      * @param max
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
@@ -269,7 +311,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMinumum(int) and update the
      * scale.
-     *
+     * 
      * @param min
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
@@ -282,7 +324,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setPageIncrement(int) and update the
      * scale.
-     *
+     * 
      * @param pageIncrement
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
@@ -294,7 +336,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Set all Scale values.
-     *
+     * 
      * @param min
      *            the value used for Scale.setMinimum(int).
      * @param max
@@ -339,18 +381,9 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
+            fireValueChanged(VALUE, new Integer(oldValue),
+                    new Integer(newValue));
             oldValue = newValue;
         }
     }
-
-	/**
-	 * Bug 470866 fix
-	 */
-	@Override
-	public void setEnabled(boolean enabled, Composite parent) {
-		super.setEnabled(enabled, parent);
-		getScaleControl().setEnabled(enabled);
-	}
-
 }
