@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -78,6 +78,11 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
 	protected static int MAX_SAVE_INTERVAL = 9999;
 
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.PreferencePage
+     */
     @Override
 	protected Control createContents(Composite parent) {
 
@@ -111,7 +116,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
     /**
      * Create the widget for the user dialog preference.
-     *
+     * 
      * @param composite
      */
     protected void createShowUserDialogPref(Composite composite) {
@@ -122,17 +127,17 @@ public class WorkbenchPreferencePage extends PreferencePage implements
                 .getPreferenceStore().getBoolean(
                         IPreferenceConstants.RUN_IN_BACKGROUND));
     }
-
+    
     /**
      * Create the widget for the heap status preference.
-     *
+     * 
      * @param composite
      */
     protected void createHeapStatusPref(Composite composite) {
         showHeapStatusButton = new Button(composite, SWT.CHECK);
         showHeapStatusButton.setText(WorkbenchMessages.WorkbenchPreference_HeapStatusButton);
         showHeapStatusButton.setToolTipText(WorkbenchMessages.WorkbenchPreference_HeapStatusButtonToolTip);
-
+        
         showHeapStatusButton.setSelection(PrefUtil.getAPIPreferenceStore().getBoolean(
                         IWorkbenchPreferenceConstants.SHOW_MEMORY_MONITOR));
     }
@@ -140,7 +145,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
     /**
      * Creates the composite which will contain all the preference controls for
      * this page.
-     *
+     * 
      * @param parent
      *            the parent composite
      * @return the composite for this page
@@ -158,7 +163,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
     protected void createStickyCyclePref(Composite composite) {
         stickyCycleButton = new Button(composite, SWT.CHECK);
-        stickyCycleButton.setText(WorkbenchMessages.WorkbenchPreference_stickyCycleButton);
+        stickyCycleButton.setText(WorkbenchMessages.WorkbenchPreference_stickyCycleButton); 
         stickyCycleButton.setSelection(getPreferenceStore().getBoolean(
                 IPreferenceConstants.STICKY_CYCLE));
     }
@@ -166,7 +171,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 	/**
 	 * Create a composite that contains entry fields specifying save interval
 	 * preference.
-	 *
+	 * 
 	 * @param composite
 	 *            the Composite the group is created in.
 	 */
@@ -190,7 +195,8 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 		saveInterval.setPage(this);
 		saveInterval.setTextLimit(Integer.toString(MAX_SAVE_INTERVAL).length());
 		saveInterval.setErrorMessage(NLS.bind(
-				WorkbenchMessages.WorkbenchPreference_workbenchSaveIntervalError, Integer.valueOf(MAX_SAVE_INTERVAL)));
+				WorkbenchMessages.WorkbenchPreference_workbenchSaveIntervalError, new Integer(
+						MAX_SAVE_INTERVAL)));
 		saveInterval.setValidateStrategy(StringFieldEditor.VALIDATE_ON_KEY_STROKE);
 		saveInterval.setValidRange(0, MAX_SAVE_INTERVAL);
 
@@ -218,7 +224,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
         GridData data = new GridData(GridData.HORIZONTAL_ALIGN_FILL
                 | GridData.GRAB_HORIZONTAL);
         buttonComposite.setLayoutData(data);
-        buttonComposite.setText(WorkbenchMessages.WorkbenchPreference_openMode);
+        buttonComposite.setText(WorkbenchMessages.WorkbenchPreference_openMode); 
 
         String label = WorkbenchMessages.WorkbenchPreference_doubleClick;
         doubleClickButton = createRadioButton(buttonComposite, label);
@@ -242,7 +248,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
         });
         singleClickButton.setSelection(openOnSingleClick);
 
-        label = WorkbenchMessages.WorkbenchPreference_singleClick_SelectOnHover;
+        label = WorkbenchMessages.WorkbenchPreference_singleClick_SelectOnHover; 		
         selectOnHoverButton = new Button(buttonComposite, SWT.CHECK | SWT.LEFT);
         selectOnHoverButton.setText(label);
         selectOnHoverButton.setEnabled(openOnSingleClick);
@@ -258,7 +264,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 		data.horizontalIndent = LayoutConstants.getIndent();
         selectOnHoverButton.setLayoutData(data);
 
-        label = WorkbenchMessages.WorkbenchPreference_singleClick_OpenAfterDelay;
+        label = WorkbenchMessages.WorkbenchPreference_singleClick_OpenAfterDelay;		
         openAfterDelayButton = new Button(buttonComposite, SWT.CHECK | SWT.LEFT);
         openAfterDelayButton.setText(label);
         openAfterDelayButton.setEnabled(openOnSingleClick);
@@ -274,7 +280,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 		data.horizontalIndent = LayoutConstants.getIndent();
         openAfterDelayButton.setLayoutData(data);
 
-        createNoteComposite(font, buttonComposite, WorkbenchMessages.Preference_note,
+        createNoteComposite(font, buttonComposite, WorkbenchMessages.Preference_note, 
                 WorkbenchMessages.WorkbenchPreference_noEffectOnAllViews);
     }
 
@@ -287,7 +293,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
     /**
      * Utility method that creates a radio button instance and sets the default
      * layout data.
-     *
+     * 
      * @param parent
      *            the parent for the new button
      * @param label
@@ -302,7 +308,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
     /**
      * Utility method that creates a combo box
-     *
+     * 
      * @param parent
      *            the parent for the new label
      * @return the new widget
@@ -318,7 +324,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
     /**
      * Utility method that creates a label instance and sets the default layout
      * data.
-     *
+     * 
      * @param parent
      *            the parent for the new label
      * @param text
@@ -337,7 +343,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
     /**
      * Creates a tab of one horizontal spans.
-     *
+     * 
      * @param parent
      *            the parent in which the tab should be created
      */
@@ -354,7 +360,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 
     /**
      * Returns preference store that belongs to the our plugin.
-     *
+     * 
      * @return the preference store for this plugin
      */
     @Override
@@ -402,7 +408,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
                 IPreferenceConstants.RUN_IN_BACKGROUND));
         showHeapStatusButton.setSelection(PrefUtil.getAPIPreferenceStore().getDefaultBoolean(
                 IWorkbenchPreferenceConstants.SHOW_MEMORY_MONITOR));
-
+		
         super.performDefaults();
     }
 
@@ -425,7 +431,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 		store.setValue(IPreferenceConstants.WORKBENCH_SAVE_INTERVAL, saveInterval.getIntValue());
         PrefUtil.getAPIPreferenceStore().setValue(IWorkbenchPreferenceConstants.SHOW_MEMORY_MONITOR, showHeapStatusButton.getSelection());
         updateHeapStatus(showHeapStatusButton.getSelection());
-
+        
         int singleClickMethod = openOnSingleClick ? OpenStrategy.SINGLE_CLICK
                 : OpenStrategy.DOUBLE_CLICK;
         if (openOnSingleClick) {
@@ -454,6 +460,6 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 				((WorkbenchWindow) window).showHeapStatus(selection);
 			}
 		}
-
+		
 	}
 }
