@@ -29,7 +29,7 @@ public class StreetAddress implements IPropertySource {
     private String streetName;
 
     //default property values
-    private static final Integer BUILD_NO_DEFAULT = Integer.valueOf(0);
+    private static final Integer BUILD_NO_DEFAULT = new Integer(0);
 
     private static final String APTBOX_DEFAULT = MessageUtil
             .getString("unspecified"); //$NON-NLS-1$
@@ -53,10 +53,11 @@ public class StreetAddress implements IPropertySource {
 
     public static final String P_STREET = MessageUtil.getString("street"); //$NON-NLS-1$
 
-    private static Vector<TextPropertyDescriptor> descriptors;
+    //
+    private static Vector descriptors;
 
     static {
-        descriptors = new Vector<>();
+        descriptors = new Vector();
         descriptors.addElement(new TextPropertyDescriptor(P_ID_BUILD_NO,
                 P_BUILD_NO));
         descriptors
@@ -77,7 +78,7 @@ public class StreetAddress implements IPropertySource {
      */
     public StreetAddress(int buildNo, String streetName) {
         super();
-        setBuildNo(Integer.valueOf(buildNo));
+        setBuildNo(new Integer(buildNo));
         setStreetName(streetName);
     }
 
@@ -86,13 +87,15 @@ public class StreetAddress implements IPropertySource {
      */
     public StreetAddress(int buildNo, String aptBox, String streetName) {
         super();
-        setBuildNo(Integer.valueOf(buildNo));
+        setBuildNo(new Integer(buildNo));
         setAptBox(aptBox);
         setStreetName(streetName);
     }
 
-    @Override
-	public boolean equals(Object ob) {
+    /* (non-Javadoc)
+     * Method declared on Object
+     */
+    public boolean equals(Object ob) {
         return toString().equals(ob.toString());
     }
 
@@ -117,22 +120,26 @@ public class StreetAddress implements IPropertySource {
     /**
      * Returns the descriptors
      */
-    private static Vector<TextPropertyDescriptor> getDescriptors() {
+    private static Vector getDescriptors() {
         return descriptors;
     }
 
-    @Override
-	public Object getEditableValue() {
+    /* (non-Javadoc)
+     * Method declared on IPropertySource
+     */
+    public Object getEditableValue() {
         return this.toString();
     }
 
-    @Override
-	public IPropertyDescriptor[] getPropertyDescriptors() {
-        return getDescriptors().toArray(
+    /* (non-Javadoc)
+     * Method declared on IPropertySource
+     */
+    public IPropertyDescriptor[] getPropertyDescriptors() {
+        return (IPropertyDescriptor[]) getDescriptors().toArray(
                 new IPropertyDescriptor[getDescriptors().size()]);
     }
 
-    /**
+    /** 
      * The <code>Name</code> implementation of this
      * <code>IPropertySource</code> method returns the following properties
      *
@@ -140,8 +147,7 @@ public class StreetAddress implements IPropertySource {
      * 	2) P_APTBOX returns java.lang.String
      *	3) P_STREET returns java.lang.String
      */
-    @Override
-	public Object getPropertyValue(Object propKey) {
+    public Object getPropertyValue(Object propKey) {
         if (propKey.equals(P_ID_BUILD_NO))
             return getBuildNo().toString();
         if (propKey.equals(P_ID_APTBOX))
@@ -160,13 +166,17 @@ public class StreetAddress implements IPropertySource {
         return streetName;
     }
 
-    @Override
-	public int hashCode() {
+    /* (non-Javadoc)
+     * Method declared on Object
+     */
+    public int hashCode() {
         return toString().hashCode();
     }
 
-    @Override
-	public boolean isPropertySet(Object property) {
+    /* (non-Javadoc)
+     * Method declared on IPropertySource
+     */
+    public boolean isPropertySet(Object property) {
         if (property.equals(P_ID_BUILD_NO))
             return getBuildNo() != BUILD_NO_DEFAULT;
         if (property.equals(P_ID_APTBOX))
@@ -176,8 +186,10 @@ public class StreetAddress implements IPropertySource {
         return false;
     }
 
-    @Override
-	public void resetPropertyValue(Object property) {
+    /* (non-Javadoc)
+     * Method declared on IPropertySource
+     */
+    public void resetPropertyValue(Object property) {
         if (property.equals(P_ID_BUILD_NO)) {
             setBuildNo(BUILD_NO_DEFAULT);
             return;
@@ -206,20 +218,19 @@ public class StreetAddress implements IPropertySource {
         buildNo = newBuildNo;
     }
 
-    /**
+    /** 
      * The <code>Name</code> implementation of this
-     * <code>IPropertySource</code> method
+     * <code>IPropertySource</code> method 
      * defines the following Setable properties
      *
      * 	1) P_BUILD_NO expects java.lang.Integer
      * 	2) P_APTBOX expects java.lang.String
      *	3) P_STREET expects java.lang.String
      */
-    @Override
-	public void setPropertyValue(Object name, Object value) {
+    public void setPropertyValue(Object name, Object value) {
         if (name.equals(P_ID_BUILD_NO)) {
             try {
-                setBuildNo(Integer.valueOf(Integer.parseInt((String) value)));
+                setBuildNo(new Integer(Integer.parseInt((String) value)));
             } catch (NumberFormatException e) {
                 setBuildNo(BUILD_NO_DEFAULT);
             }
@@ -246,8 +257,7 @@ public class StreetAddress implements IPropertySource {
      * The value as displayed in the Property Sheet. Will not print default values
      * @return java.lang.String
      */
-    @Override
-	public String toString() {
+    public String toString() {
         StringBuffer outStringBuffer = new StringBuffer();
         if (!getAptBox().equals(APTBOX_DEFAULT)) {
             outStringBuffer.append(getAptBox());
