@@ -23,21 +23,19 @@ import org.eclipse.jface.tests.databinding.AbstractDefaultRealmTestCase;
 
 /**
  * @since 1.0
- *
+ * 
  */
 public class ComputedValueTest extends AbstractDefaultRealmTestCase {
     public void testValueType() throws Exception {
         ComputedValue cv = new ComputedValue(Integer.TYPE) {
-            @Override
-			protected Object calculate() {
-                return Integer.valueOf(42);
+            protected Object calculate() {
+                return new Integer(42);
             }
         };
         assertEquals("value type should be the type that was set", Integer.TYPE, cv.getValueType());
 
         cv = new ComputedValue() {
-            @Override
-			protected Object calculate() {
+            protected Object calculate() {
                 // TODO Auto-generated method stub
                 return null;
             }
@@ -48,27 +46,25 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
     public void test_getValue() throws Exception {
         ComputedValue cv = new ComputedValue() {
-            @Override
-			protected Object calculate() {
-                return Integer.valueOf(42);
+            protected Object calculate() {
+                return new Integer(42);
             }
         };
-        assertEquals("Calculated value should be 42", Integer.valueOf(42), cv.getValue());
+        assertEquals("Calculated value should be 42", new Integer(42), cv.getValue());
     }
 
     public void testDependencyValueChange() throws Exception {
-        final WritableValue value = new WritableValue(Integer.valueOf(42), Integer.TYPE);
+        final WritableValue value = new WritableValue(new Integer(42), Integer.TYPE);
 
         ComputedValue cv = new ComputedValue() {
-            @Override
-			protected Object calculate() {
+            protected Object calculate() {
                 return value.getValue();
             }
         };
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
 
-        value.setValue(Integer.valueOf(44));
+        value.setValue(new Integer(44));
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
     }
@@ -78,8 +74,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
             super(initialValue, valueType);
         }
 
-        @Override
-		public boolean hasListeners() {
+        public boolean hasListeners() {
             return super.hasListeners();
         }
     }
@@ -88,8 +83,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
         final List values = new ArrayList();
 
         ComputedValue cv = new ComputedValue() {
-            @Override
-			protected Object calculate() {
+            protected Object calculate() {
                 int sum = 0;
                 for (Iterator it = values.iterator(); it.hasNext();) {
                     WritableValue value = (WritableValue) it.next();
@@ -97,41 +91,40 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
                 }
 
-                return Integer.valueOf(sum);
+                return new Integer(sum);
             }
         };
 
-        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
-        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
+        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, new Integer(1));
+        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, new Integer(1));
         values.add(value1);
         values.add(value2);
-
+        
         assertFalse(value1.hasListeners());
         assertFalse(value2.hasListeners());
         cv.getValue();
         assertTrue(value1.hasListeners());
         assertTrue(value2.hasListeners());
-
+        
         //force the computed value to be stale
-        value2.setValue(Integer.valueOf(2));
+        value2.setValue(new Integer(2));
         //remove value2 from the values that are used to compute the value
         values.remove(value2);
-
+        
         //force the value to be computed
         cv.getValue();
-        assertEquals(Integer.valueOf(1), cv.getValue());
+        assertEquals(new Integer(1), cv.getValue());
         assertTrue(value1.hasListeners());
         assertFalse("because value2 is not a part of the calculation the listeners should have been removed", value2.hasListeners());
     }
-
+    
     public void testSetValueUnsupportedOperationException() throws Exception {
         ComputedValue cv = new ComputedValue() {
-            @Override
-			protected Object calculate() {
+            protected Object calculate() {
                 return null;
             }
         };
-
+        
         try {
             cv.setValue(new Object());
             fail("exception should have been thrown");
