@@ -23,27 +23,37 @@ import com.ibm.icu.text.NumberFormat;
 public class StringToByteValidatorTest extends
 		StringToNumberValidatorTestHarness {
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.tests.internal.databinding.validation.StringToNumberValidatorTestHarness#getInRangeNumber()
+	 */
 	protected Number getInRangeNumber() {
 		return new Byte(Byte.MAX_VALUE);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.tests.internal.databinding.validation.StringToNumberValidatorTestHarness#getInvalidString()
+	 */
 	protected String getInvalidString() {
 		return "1.1";
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.tests.internal.databinding.validation.StringToNumberValidatorTestHarness#getOutOfRangeNumber()
+	 */
 	protected Number getOutOfRangeNumber() {
-		return Integer.valueOf(Byte.MAX_VALUE + 1);
+		return new Integer(Byte.MAX_VALUE + 1);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.tests.internal.databinding.validation.StringToNumberValidatorTestHarness#setupNumberFormat()
+	 */
 	protected NumberFormat setupNumberFormat() {
 		return NumberFormat.getIntegerInstance();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.tests.internal.databinding.validation.StringToNumberValidatorTestHarness#setupValidator(com.ibm.icu.text.NumberFormat)
+	 */
 	protected IValidator setupValidator(NumberFormat numberFormat) {
 		StringToByteConverter converter = StringToByteConverter.toByte(numberFormat, false);
 		return new StringToByteValidator(converter);
