@@ -21,7 +21,7 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
 import org.eclipse.jface.databinding.conformance.ObservableDelegateTest;
 import org.eclipse.jface.databinding.conformance.delegate.AbstractObservableValueContractDelegate;
 import org.eclipse.jface.databinding.conformance.swt.SWTMutableObservableValueContractTest;
-import org.eclipse.jface.databinding.swt.DisplayRealm;
+import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
@@ -46,7 +46,6 @@ public class SpinnerObservableValueSelectionTest extends ObservableDelegateTest 
 		super(testName, new Delegate());
 	}
 
-	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
@@ -55,21 +54,20 @@ public class SpinnerObservableValueSelectionTest extends ObservableDelegateTest 
 		spinner = delegate.spinner;
 	}
 
-	@Override
 	protected IObservable doCreateObservable() {
 		return getObservableContractDelegate().createObservable(
-				DisplayRealm.getRealm(Display.getDefault()));
+				SWTObservables.getRealm(Display.getDefault()));
 	}
 
 	public void testGetValue() throws Exception {
 		int value = 100;
 		spinner.setSelection(value);
-		assertEquals(Integer.valueOf(value), observable.getValue());
+		assertEquals(new Integer(value), observable.getValue());
 	}
 
 	public void testSetValue() throws Exception {
 		int value = 100;
-		observable.setValue(Integer.valueOf(value));
+		observable.setValue(new Integer(value));
 		assertEquals(value, spinner.getSelection());
 	}
 
@@ -88,42 +86,36 @@ public class SpinnerObservableValueSelectionTest extends ObservableDelegateTest 
 
 		Spinner spinner;
 
-		@Override
 		public void setUp() {
 			shell = new Shell();
 			spinner = new Spinner(shell, SWT.NONE);
 			spinner.setMaximum(1000);
 		}
 
-		@Override
 		public void tearDown() {
 			shell.dispose();
 		}
 
-		@Override
 		public IObservableValue createObservableValue(Realm realm) {
 			return WidgetProperties.selection().observe(realm, spinner);
 		}
 
-		@Override
 		public void change(IObservable observable) {
 			spinner.setSelection(createIntegerValue(
 					(IObservableValue) observable).intValue());
 			spinner.notifyListeners(SWT.Selection, null);
 		}
 
-		@Override
 		public Object getValueType(IObservableValue observable) {
 			return Integer.TYPE;
 		}
 
-		@Override
 		public Object createValue(IObservableValue observable) {
 			return createIntegerValue(observable);
 		}
 
 		private Integer createIntegerValue(IObservableValue observable) {
-			return Integer.valueOf(((Integer) observable.getValue()).intValue() + 1);
+			return new Integer(((Integer) observable.getValue()).intValue() + 1);
 		}
 	}
 }
