@@ -30,25 +30,20 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
             implements ITableLabelProvider {
         public boolean fExtended = false;
 
-        @Override
-		public String getText(Object element) {
-            if (fExtended) {
-				return providedString((String) element);
-			}
+        public String getText(Object element) {
+            if (fExtended)
+                return providedString((String) element);
 
             return element.toString();
         }
 
-        @Override
-		public String getColumnText(Object element, int index) {
-            if (fExtended) {
-				return providedString((TestElement) element);
-			}
+        public String getColumnText(Object element, int index) {
+            if (fExtended)
+                return providedString((TestElement) element);
             return element.toString();
         }
 
-        @Override
-		public Image getColumnImage(Object element, int columnIndex) {
+        public Image getColumnImage(Object element, int columnIndex) {
             return null;
         }
     }
@@ -57,8 +52,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
         super(name);
     }
 
-    @Override
-	protected StructuredViewer createViewer(Composite parent) {
+    protected StructuredViewer createViewer(Composite parent) {
         TreeViewer viewer = new TreeViewer(parent);
         viewer.setContentProvider(new TestModelContentProvider());
         viewer.setLabelProvider(new TableTreeTestLabelProvider());
@@ -80,22 +74,19 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
         fTreeViewer = viewer;
         return viewer;
     }
-
-    @Override
-	protected int getItemCount() {
+    
+    protected int getItemCount() {
         TestElement first = fRootElement.getFirstChild();
         TreeItem ti = (TreeItem) fViewer.testFindItem(first);
          return ti.getParent().getItemCount();
     }
 
-    @Override
-	protected int getItemCount(TestElement element) {
+    protected int getItemCount(TestElement element) {
         TreeItem ti = (TreeItem) fViewer.testFindItem(element);
         return ti.getItemCount();
     }
 
-    @Override
-	protected String getItemText(int at) {
+    protected String getItemText(int at) {
         return ((Tree) fViewer.getControl()).getItems()[at].getText();
     }
 
@@ -108,7 +99,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
 		try {
 			method = ColumnViewer.class.getDeclaredMethod("getViewerColumn", new Class[]{int.class});
 			method.setAccessible(true);
-			return (ViewerColumn) method.invoke(viewer, new Object[]{Integer.valueOf(index)});
+			return (ViewerColumn) method.invoke(viewer, new Object[]{new Integer(index)});
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
@@ -120,9 +111,8 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
 		assertNotNull(getViewerColumn((TreeViewer) fViewer, 1));
 		assertNull(getViewerColumn((TreeViewer) fViewer, 2));
     }
-
-    @Override
-	public void testLabelProvider() {
+    
+    public void testLabelProvider() {
         TreeViewer viewer = (TreeViewer) fViewer;
         TableTreeTestLabelProvider provider = (TableTreeTestLabelProvider) viewer
                 .getLabelProvider();
@@ -137,8 +127,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
         fViewer.refresh();
     }
 
-    @Override
-	public void testLabelProviderStateChange() {
+    public void testLabelProviderStateChange() {
         TreeViewer viewer = (TreeViewer) fViewer;
         TableTreeTestLabelProvider provider = (TableTreeTestLabelProvider) viewer
                 .getLabelProvider();
