@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,7 +7,6 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 444070
  *******************************************************************************/
 package org.eclipse.ui.tests.api;
 
@@ -15,11 +14,11 @@ import junit.framework.Assert;
 import junit.framework.TestCase;
 
 import org.eclipse.ui.IMemento;
-import org.eclipse.ui.IViewPart;
 import org.eclipse.ui.IViewSite;
+import org.eclipse.ui.PartInitException;
 
 /**
- * This view is used to test the creation and restoration of
+ * This view is used to test the creation and restoration of 
  * view state between sessions.
  */
 public class SessionView extends MockViewPart {
@@ -38,8 +37,7 @@ public class SessionView extends MockViewPart {
     /**
      * @see IViewPart#init(IViewSite, IMemento)
      */
-    @Override
-	public void init(IViewSite site, IMemento memento) {
+    public void init(IViewSite site, IMemento memento) throws PartInitException {
         super.init(site, memento);
         this.memento = memento;
     }
@@ -47,8 +45,7 @@ public class SessionView extends MockViewPart {
     /**
      * Create an IMemento.
      */
-    @Override
-	public void saveState(IMemento memento) {
+    public void saveState(IMemento memento) {
         createMementoState(memento);
     }
 
@@ -82,14 +79,14 @@ public class SessionView extends MockViewPart {
         // constructor.
         Assert.assertNotNull(memento);
 
-        // Read float.
+        // Read float.	
         Float bigFloat = memento.getFloat("float");
         Assert.assertNotNull(bigFloat);
         Assert.assertEquals(bigFloat.floatValue(), 0.50f, 0.0001);
 
-        // Read int.
+        // Read int.	
         Integer bigInt = memento.getInteger("integer");
-        Assert.assertEquals(bigInt, Integer.valueOf(50));
+        Assert.assertEquals(bigInt, new Integer(50));
 
         // Read string.
         String str = memento.getString("string");
@@ -99,7 +96,7 @@ public class SessionView extends MockViewPart {
         IMemento child = memento.getChild("single");
         Assert.assertNotNull(child);
         bigInt = child.getInteger("id");
-        Assert.assertEquals(bigInt, Integer.valueOf(1));
+        Assert.assertEquals(bigInt, new Integer(1));
 
         // Read multiple children.
         bigInt = memento.getInteger("multiple.count");
@@ -111,7 +108,7 @@ public class SessionView extends MockViewPart {
             child = children[nX];
             Assert.assertNotNull(child);
             bigInt = child.getInteger("id");
-            Assert.assertEquals(bigInt, Integer.valueOf(nX));
+            Assert.assertEquals(bigInt, new Integer(nX));
         }
     }
 }
