@@ -17,11 +17,10 @@ import org.eclipse.ui.handlers.HandlerUtil;
 
 public class ToggleStateHandler extends AbstractHandler {
 
-	@Override
 	public Object execute(ExecutionEvent event) throws ExecutionException {
-
+		
 		boolean oldValue = HandlerUtil.toggleCommandState(event.getCommand());
-		return Boolean.valueOf(oldValue);
+		return new Boolean(oldValue);
 	}
 
 }
