@@ -38,7 +38,7 @@ import org.eclipse.ui.tests.harness.util.UITestCase;
 
 /**
  * @since 3.4
- *
+ * 
  */
 public class KeysPreferenceModelTest extends UITestCase {
 
@@ -119,7 +119,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		final ArrayList events = new ArrayList();
 		// test setup vars
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -165,7 +164,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -219,7 +217,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -277,7 +274,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -421,7 +417,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -439,8 +434,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 				new PropertyChangeEvent(conflict2, BindingElement.PROP_CONTEXT,
 						dialog, window),
 				new PropertyChangeEvent(conflict2,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(conflict2,
 						ModelElement.PROP_MODEL_OBJECT, c2model, conflict2
 								.getModelObject()),
@@ -473,7 +468,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -495,8 +489,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 						BindingElement.PROP_CONFLICT, Boolean.TRUE,
 						Boolean.FALSE),
 				new PropertyChangeEvent(conflict2,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(controller.getConflictModel(),
 						ConflictModel.PROP_CONFLICTS_REMOVE, null, conflict2),
 				new PropertyChangeEvent(conflict2,
@@ -556,7 +550,6 @@ public class KeysPreferenceModelTest extends UITestCase {
 		// test setup vars
 		final ArrayList events = new ArrayList();
 		controller.addPropertyChangeListener(new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				events.add(event);
 			}
@@ -573,8 +566,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 				new PropertyChangeEvent(conflict4, BindingElement.PROP_CONTEXT,
 						null, window),
 				new PropertyChangeEvent(conflict4,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(cm, CommonModel.PROP_SELECTED_ELEMENT,
 						null, conflict4.getContext()),
 				new PropertyChangeEvent(conflict4,
@@ -833,13 +826,13 @@ public class KeysPreferenceModelTest extends UITestCase {
 		KeySequence ctrl5 = KeySequence.getInstance("CTRL+5 N");
 		activateEditor.setTrigger(ctrl5);
 
-		assertEquals(Integer.valueOf(Binding.USER), activateEditor.getUserDelta());
+		assertEquals(new Integer(Binding.USER), activateEditor.getUserDelta());
 		bm.copy();
 		BindingElement activeTwo = (BindingElement) bm.getSelectedElement();
 		assertFalse(activateEditor == activeTwo);
 
 		activeTwo.setTrigger(KeySequence.getInstance("CTRL+5 M"));
-		assertEquals(Integer.valueOf(Binding.USER), activeTwo.getUserDelta());
+		assertEquals(new Integer(Binding.USER), activeTwo.getUserDelta());
 
 		ArrayList activates = new ArrayList();
 		Iterator i = bm.getBindings().iterator();
@@ -863,7 +856,7 @@ public class KeysPreferenceModelTest extends UITestCase {
 			}
 		}
 		assertEquals(1, activates.size());
-		assertEquals(Integer.valueOf(Binding.SYSTEM), activateEditor.getUserDelta());
+		assertEquals(new Integer(Binding.SYSTEM), activateEditor.getUserDelta());
 	}
 
 	public void testRestoreCommand() throws Exception {
